Aprendizados com API e fetch

--- a/index.html
+++ b/index.html
@@ -57,7 +57,20 @@
                  com o back, não sabia oque era API, JSON, fetch, GET etc. etc.. Mas esse pequeno
                  desafio serviu de base para procurar aprofundar nisso...</p>  
             </div>
-        </section>    
+        </section>
+        
+        <section id="sec3">
+            <div>
+                <img src="A.IMAGENS/0005-API001.jpg" alt="Api Rick e Morty"><br>
+                <a href="https://heyallan94.github.io/MyProjectsAllan/API-001-RICK-MORTY/index.html">API RICK MORTY</a>
+                <p>Hoje dia 27/08/2022, após ter estudando um pouco sobre fetch api, aprendi sobre await, then e async
+                    Sei que estou bem no começo e o aprendizado é grande, cada dia que passa aprendo coisas novas e 
+                    utilidades para elas.
+                    O fetch é extremamente útil e importante e também muito legal de usar.
+                </p>
+            </div>
+        </section>
+
       </main>
 
       <footer>
