--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <header>
       <a id="name" href="https://heyallan94.github.io/MyProjectsAllan/">Allan Santos</a>
       <nav>
-        <a href="">Home</a>
-        <a href="">Sobre mim</a>
-        <a href="">Experiências</a>
-        <a href="">Portfólio</a>
-        <a href="">Contato</a>
+        <a class ="links" href="">Home</a>
+        <a class ="links" href="">Sobre mim</a>
+        <a class ="links" href="">Experiências</a>
+        <a class ="links" href="">Portfólio</a>
+        <a class ="links" href="">Contato</a>
       </nav>       
     </header>
 
@@ -76,7 +76,7 @@
       <footer>
         <section>
             <p>(Mais projetos em desenvolvimento!)</p>
-            <p>Allan Santos 2022.</p>
+            <p>2022</p>
         </section>
       </footer>
 </body>
