Donkey kong game

--- a/index.html
+++ b/index.html
@@ -13,13 +13,11 @@
 <body>
     
     <header>
-      <a id="name" href="https://heyallan94.github.io/MyProjectsAllan/">Allan Santos</a>
+      <a id="name" href="/">Allan Santos</a>
       <nav>
-        <a class ="links" href="">Home</a>
-        <a class ="links" href="">Sobre mim</a>
-        <a class ="links" href="">Experiências</a>
-        <a class ="links" href="">Portfólio</a>
-        <a class ="links" href="">Contato</a>
+        <a class ="links" >Aprendizado</a>
+        <a class ="links" href="/">Projetos</a>
+        <a class ="links" >Contato</a>
       </nav>       
     </header>
 
