Donkey kong game

--- a/index.html
+++ b/index.html
@@ -67,6 +67,17 @@
                     O fetch é extremamente útil e importante e também muito legal de usar.
                 </p>
             </div>
+
+            <div>
+                <img src="A.IMAGENS/0006-Donkey-kong.jpg" alt="Donkey Kong"><br>
+                <a href="https://heyallan94.github.io/MyProjectsAllan/JOGO-DONKEY-KONG-001/index.html">Donkey Kong JS</a>
+                <p>Hoje dia 31/08/2022, um pequeno jogo que estou acrescentando algumas coisas. Música e efeito de explosão.
+                    Prática com css e uma lógica um pouco mais complexa com javascript, pois, ao tocar em certo objeto.
+                    Se estiver na altura X quando objeto 2 estiver na posição Y, você perde.
+                    Enfim, bom aprendizado!
+                    
+                </p>
+            </div>
         </section>
 
       </main>
