Real task problem credit card

--- a/REAL-TASKS/Cartao-credito/index.html
+++ b/REAL-TASKS/Cartao-credito/index.html
@@ -21,7 +21,7 @@
     
 </div>
 
-<input id="hide" type="button" value="👁" onclick="hidef()">
+<input id="hide" type="button" value="•" onclick="hidef()">
 <form id="cardform">    
     <input placeholder="0000 0000 0000 0000" autocomplete="off" class="line-1" maxlength="19" type="text" oninput="line1f()" ><br>
     <input placeholder="Your name" class="line-2" autocomplete="off" maxlength="25" type="text" oninput="line2f()" oninput="line2f()"/><br>
