Estudos Outubro 2022 Paiva company

--- a/index.html
+++ b/index.html
@@ -91,6 +91,18 @@
                     que pediu para fazer uma função que escondesse os dados da tela.
                 </p>
             </div>
+
+            <div>
+                <img src="A.IMAGENS/0008-Cartao-visita.jpg" alt="Cartão de visitas"><br>
+                <a href="https://heyallan94.github.io/MyProjectsAllan/LANDING-PAGE-4-Paiva/indexpaiva.html">Cartão virtual</a>
+                <p>Um amigo meu que mora nos EUA, pediu para que eu fizesse um cartão virtual da company dele.
+                    Sem muito edição de códigos, ele precisa de um cartão virtual que fique online. O cliente americano
+                    precisa apenas apontar o celular para o QR code, que já vai direto para a página que ao clicar
+                    no whatsapp ou no sms, já consegue ligar ou mandar mensagem para o amigo.
+                    Caso ele precise de adição de fotos do trabalho dele, será o mesmo QR code!
+                    10/10/2022
+                </p>
+            </div>
         </section>
 
       </main>
