--- a/API-002-CLIMA/index.html
+++ b/API-002-CLIMA/index.html
@@ -21,7 +21,7 @@
 <body>
     <div class="container">
         <div class="form">
-            <h3>Confira o clima de uma cidade:</h3>
+            <h3>Wheater API </h3>
             <div class="form-input-container">
                 <input type="text" placeholder="Digite o nome da cidade" id="city-input">
                 <button id="search"> 
@@ -32,22 +32,21 @@
       <div id="weather-data">
         <h2>
             <i class="fa-solid fa-location-dot"></i>
-            <span id="city">New York</span>
-            <img src="https://countryflagsapi.com/png/us" id="country" alt="Bandeira do país">
+            <span id="city"></span>
+            <img src="https://countryflagsapi.com/png/br" id="country" alt="Bandeira do país">
         </h2>
-        <p id="temperature"><span>21</span>&deg;C</p>
+        <p id="temperature"><span>0</span>&deg;C</p>
         <div id="description-cointainer">
-            <p id="description">Nublado</p>
-            <img alt="Condições tempo" id="weather-icon">
+            <p id="description">Tempo</p>
         </div>
         <div id="details-container">
             <p id="umidity">
                 <i class="fa-solid fa-droplet"></i>
-                <span>48%</span>
+                <span>%</span>
             </p>
             <p id="wind">
-                <i class="fa-solid fa-wind"></i>
-                <span>3km/h</span>
+                <i id="windnumber" class="fa-solid fa-wind"> 0</i>
+                <span>km/h</span>
             </p>
         </div>
       </div>  
