Landing Page para loja criada

--- a/index.html
+++ b/index.html
@@ -105,6 +105,20 @@
             </div>
         </section>
 
+        <section id="sec5">
+            <div class="real-task">
+                <img src="A.IMAGENS/0007-cartao-credito.jpg" alt="Cartão Crédito"><br>
+                <a href="https://heyallan94.github.io/MyProjectsAllan/REAL-TASKS/Cartao-credito/index.html">Cartão crédito</a>
+                <p>Nesse projeto de real task, escrevi muitas linhas. Muita lógica que não conhecia foi aplicada aqui.
+                    Um pouco do css que já sei.
+                    Atualmente, estou fazendo muitos projetos sem tutoriais. Sempre procuro por ideias que posso
+                    implementar no código. O botão de esconder os dados pessoais é parte de um desafio de um amigo meu
+                    que pediu para fazer uma função que escondesse os dados da tela.
+                </p>
+            </div>
+
+        </section>
+
       </main>
 
       <footer>
