--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <img src="A.IMAGENS/0003-EI-Escola-Financeira.jpg" alt="Escola financeira"><br>
                 <a href="https://heyallan94.github.io/MyProjectsAllan/LANDING-PAGE-3-EI/index.html">Escola Finaceira</a>
                 <p>Amigo meu, pediu para fazer este site como landing page para sua empresa
-                 (09/07/2022) Ainda não está pronto a landing page!</p>
+                 </p>
             </div>
     
             <div>
@@ -107,13 +107,12 @@
 
         <section id="sec5">
             <div class="real-task">
-                <img src="A.IMAGENS/0007-cartao-credito.jpg" alt="Cartão Crédito"><br>
-                <a href="https://heyallan94.github.io/MyProjectsAllan/REAL-TASKS/Cartao-credito/index.html">Cartão crédito</a>
-                <p>Nesse projeto de real task, escrevi muitas linhas. Muita lógica que não conhecia foi aplicada aqui.
-                    Um pouco do css que já sei.
-                    Atualmente, estou fazendo muitos projetos sem tutoriais. Sempre procuro por ideias que posso
-                    implementar no código. O botão de esconder os dados pessoais é parte de um desafio de um amigo meu
-                    que pediu para fazer uma função que escondesse os dados da tela.
+                <img src="A.IMAGENS/0009-Antes-Depois.jpg" alt="Calculadoras"><br>
+                <a href="https://heyallan94.github.io/MyProjectsAllan/CALCULADORA/versao-anterior.html">Calculadora antes</a> ||
+                <a href="https://heyallan94.github.io/MyProjectsAllan/CALCULADORA/index.html">Calculadora depois</a>
+                <p>Com a primeira calculadora, aprendi muito DOM e lógica e tentei praticar algum css.
+                    Na segunda, já tinha mais conhecimento e tentei fazer uma mais intuitiva
+                    21/03/2023
                 </p>
             </div>
 
@@ -124,7 +123,7 @@
       <footer>
         <section>
             <p>(Mais projetos em desenvolvimento!)</p>
-            <p>2022</p>
+            <p>2022 - 2023</p>
         </section>
       </footer>
 </body>
