--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
         </section>
 
         <section id="sec5">
+            <div>
                 <img src="A.IMAGENS/0009-Antes-Depois.jpg" alt="Calculadoras"><br>
                 <a href="https://heyallan94.github.io/MyProjectsAllan/CALCULADORA/versao-anterior.html">Calculadora antes</a> ||
                 <a href="https://heyallan94.github.io/MyProjectsAllan/CALCULADORA/index.html">Calculadora depois</a>
