Alguns projetos que deram trabalho e usei lógica

--- a/index.html
+++ b/index.html
@@ -116,6 +116,30 @@
                 </p>
             </div>
 
+            <div class="real-task">
+                <img src="A.IMAGENS/0010-App-Registro-Funcionário.jpg" alt="Registro funcionário"><br>
+                <a href="https://heyallan94.github.io/MyProjectsAllan/REGISTRO-FUNCIONÁRIO/index.html">Registro Funcionário</a>
+                <p>Nesse projeto, avancei um pouco mais na lógica de programação e fiz algo intuitivo
+                    para o usuário. A lógica é criar um sistema que mostre ao usuário todas as despesas que 
+                    ele tem com os funcionários.
+                    23/03/2023
+
+                </p>
+            </div>
+
+        </section>
+
+        <section id="sec6">
+            <div class="real-task">
+                <img src="A.IMAGENS/0011-Login-Logout.jpg" alt="Login Logout"><br>
+                <a href="https://heyallan94.github.io/MyProjectsAllan/LANDING-PAGE-6-LOGIN-LOGOUT/index.html">Login | Logout</a>
+                <p>Aplicando lógica para salvar dados no navegador com o localStorage, puxando tais dados e deixando
+                    logado ou não se o usuário preferir.
+                    24/03/2023
+                </p>
+            </div>
+
+
         </section>
 
       </main>
