--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <header>
       <a id="name" href="https://www.linkedin.com/in/allan-santos-400440238/">Allan Santos</a>
       <nav>
-        <a class ="links" >Aprendizado</a>
-        <a class ="links" href="/">Projetos</a>
-        <a class ="links" >Front-end</a>
+        <a class="links" id="linksAprendizado" >Aprendizado</a>
+        <a class="links" id="linksProjetos" href="/">Projetos</a>
+        <a class="links" id="linksSobreMim" >Sobre mim</a>
       </nav>       
     </header>
 
