Pefil atualizado e curriculo também

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <a id="name" href="https://www.linkedin.com/in/allan-santos-400440238/">Allan Santos</a>
       <nav>
         <a class="links" id="linksAprendizado" >Aprendizado</a>
-        <a class="links" id="linksProjetos" href="/">Projetos</a>
-        <a class="links" id="linksSobreMim" >Sobre mim</a>
+        <a href="https://github.com/heyallan94/Aprendizado" target="_blank" class="links" id="linksProjetos" href="/">Projetos</a>
+        <a href="https://heyallan94.github.io/MyProjectsAllan/SOBRE-MIM/index.html" target="_blank" class="links" id="linksSobreMim" >Sobre mim</a>
       </nav>       
     </header>
 
