Atualizando Sobre-mim

--- a/SOBRE-MIM/bootstrap/index.html
+++ b/SOBRE-MIM/bootstrap/index.html
@@ -17,7 +17,8 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span id="nameCell" class="d-block d-lg-none">Allan Santos</span>
-                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="./profile.jpg" alt="..." /></span>
+                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="./profile.jpg" alt="..."
+                onclick="clickImg()"></span>
                 <img id="imgCell" src="./profile.jpg" alt="..." />
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -42,7 +43,7 @@
                         <span class="text-primary">SANTOS</span>
                     </h1>
                     <div id="addressH1Cell" class="subheading mb-5">
-                        55010-230 Caruaru-Pe-Brazil ·
+                        55010-230 • Caruaru-Pe-Brazil·
                         <a href="mailto:heyallan22@gmail.com">Heyallan22@gmail.com</a>
                     </div>
                     <p class="lead mb-5">Eu me chamo Allan e tenho 28 anos. <br><br>
@@ -260,6 +261,10 @@
         <script src="js/scripts.js"></script>
         <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
         <script>
+
+        function clickImg(){
+            window.document.location.href= 'https://www.linkedin.com/in/allan-santos-400440238/'
+        }
         AOS.init({
             /*disable: 'mobile'*/
         });
