--- a/SOBRE-MIM/bootstrap/index.html
+++ b/SOBRE-MIM/bootstrap/index.html
@@ -182,7 +182,7 @@
                             <h3 class="mb-0">CNA - Inglês definitivo</h3>
                             <div class="subheading mb-3">Curso presencial de inglês</div>
                         </div>
-                        <div class="needLines"  class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div><br>
+                        <div class="needLines"  class="flex-shrink-0"><span class="text-primary">Abril 2015 - Junho 2017</span></div><br>
                     </div>
                     <div data-aos="fade-left" class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
